# Graph_Coloring

./: .gitignore  CMakeLists.txt  README.md  job.slurm  main.cpp  run.sh
include/: graph.h  maxclique.h  solution.h
inputs/: g.col
out_opt/: anna.col.output  david.col.output  fpsol2.i.1.col.output  fpsol2.i.2.col.output  fpsol2.i.3.col.output  games120.col.output  huck.col.output  inithx.i.1.col.output  inithx.i.2.col.output  inithx.i.3.col.output  jean.col.output  le450_15b.col.output  le450_25a.col.output  le450_25b.col.output  le450_5c.col.output  le450_5d.col.output  miles1000.col.output  miles1500.col.output  miles250.col.output  miles500.col.output  miles750.col.output  mulsol.i.1.col.output  mulsol.i.2.col.output  mulsol.i.3.col.output  mulsol.i.4.col.output  mulsol.i.5.col.output  myciel3.col.output  myciel4.col.output  myciel5.col.output  queen5_5.col.output  queen6_6.col.output  queen7_7.col.output  queen8_12.col.output  queen8_8.col.output  zeroin.i.1.col.output  zeroin.i.2.col.output  zeroin.i.3.col.output
src/: CliqueColoring.cpp  CliqueColoring.hpp  CliqueColoring.tpp  Graph.cpp  Graph.hpp  graph.cpp  graph.tpp  main.cpp  main1.cpp  maxclique.cpp  solution.cpp  solution.tpp
